--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -121,11 +121,31 @@
         color: $txtSilverColor;
         margin: 0 0 0 0;
     }
+
+    .forH6 {
+        font-family: Poppins, sans-serif;
+        font-style: normal;
+        letter-spacing: -0.02em;
+        color: $txtSilverColor;
+        margin: 2px 0 0 0;
+    }
     .grid_itemBoxTwo h3, .grid_containerNoSpaceBetween h3 {
         font-family: PoppinsBold, sans-serif;
         letter-spacing: -0.02em;
         color: $headerTextColor;
         margin: 0 0 0 0;
+    }
+
+    .borderLeftGreen {
+        border-left: 3px solid #09E39C;
+        padding: 3px 5px;
+        border-radius: 5px;
+    }
+
+    .borderLeftRed {
+        border-left: 3px solid #C31162;
+        padding: 3px 5px;
+        border-radius: 5px;
     }
 
 
@@ -177,6 +197,15 @@
         letter-spacing: -0.02em;
         color: $headerTextColor;
     }
+
+    .colorOnly {
+        font-family: Poppins, sans-serif;
+        font-style: normal;
+        line-height: 20px;
+        letter-spacing: -0.02em;
+        color: $headerTextColor;
+    }
+
     .dropDownContainer {
         background: $white;
         padding: 10px 5px;
@@ -184,6 +213,10 @@
     }
     .marginTop {
         margin-top: $marginSize_20;
+    }
+
+    .marginTopOnly {
+        margin: $marginSize_20 0 0 0;
     }
     .dropDownContainer select, .dropDownContainer select:focus-visible {
         width: 100%;
