--- a/assets/scss/modal.scss
+++ b/assets/scss/modal.scss
@@ -1,9 +1,11 @@
+@import "variables";
+
 /* The Modal (background) */
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
-  padding-top: 50%; /* Location of the box */
+  padding-top: 70%; /* Location of the box */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
@@ -20,7 +22,8 @@
   margin: auto;
   padding: 0;
   border: 1px solid #888;
-  width: 80%;
+  width: 60%;
+  border-radius: 10px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
@@ -66,4 +69,32 @@
   padding: 2px 16px;
   background-color: #5cb85c;
   color: white;
+}
+
+.dropOffTxt {
+  color: $txtSilverColor;
+  font-size: 12px;
+  font-family: Poppins, sans-serif;
+  text-align: center;
+}
+
+.generatedCode {
+  text-align: center;
+  font-family: PoppinsBold, sans-serif;
+  font-style: normal;
+  line-height: 20px;
+  letter-spacing: -0.02em;
+  color: $headerTextColor;
+}
+
+.modalBtnConfirmed {
+  padding: 3px 15px;
+  font-family: Poppins, sans-serif;
+  color: white;
+  background: $btnColor;
+  border: 1px solid $btnColor;
+  font-size: 12px;
+  position: relative;
+  left: 30%;
+  margin-bottom: 15px;
 }
