--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -33,9 +33,13 @@
         height: $marginSize_20;
     }
     .menu_items {
-        width: 80%;
+        width: 100%;
         display: flex;
-        justify-content: end;
+        justify-content: flex-end;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-content: flex-end;
+        margin-right: 20px;
     }
     .divider {
         height: 80%;
